app-kuber-manifests/6_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: kolybelkin
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/v1/$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/kolybelkin/app/(.*)
            pathType: Prefix
            backend:
              service:
                name: user-operation-service-service
                port:
                  number: 80
